feat: Доработал пайп релиза

--- a/.github/workflows/dockerhub-release.yml
+++ b/.github/workflows/dockerhub-release.yml
@@ -10,7 +10,7 @@ concurrency:
 
 jobs:
   version:
-    name: Compute next version from Conventional Commits
+    name: Compute next version from LAST commit
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # нужны теги и история
+          fetch-depth: 0
 
       - name: Compute version
         id: ver
@@ -29,92 +29,49 @@ jobs:
         run: |
           set -euo pipefail
 
-          # Найдём последний релизный тег вида vX.Y.Z
+          # 1. Находим последний базовый тег
           LAST_TAG="$(git describe --tags --abbrev=0 --match 'v[0-9]*.[0-9]*.[0-9]*' 2>/dev/null || true)"
           if [[ -z "${LAST_TAG}" ]]; then
             BASE_VERSION="0.0.0"
-            RANGE="HEAD"
-            echo "No previous tags found. Base version: ${BASE_VERSION}. Using only HEAD commit."
           else
             BASE_VERSION="${LAST_TAG#v}"
-            RANGE="${LAST_TAG}..HEAD"
-            echo "Last tag: ${LAST_TAG}. Base version: ${BASE_VERSION}. Range: ${RANGE}"
           fi
+          echo "Base version: ${BASE_VERSION}"
 
-          # Разбор SemVer
-          IFS='.' read -r MAJOR MINOR PATCH <<< "${BASE_VERSION}"
-          if ! [[ "${MAJOR}" =~ ^[0-9]+$ && "${MINOR}" =~ ^[0-9]+$ && "${PATCH}" =~ ^[0-9]+$ ]]; then
-            echo "ERROR: Base version is not valid semver: ${BASE_VERSION}"
+          # 2. Берем ТОЛЬКО ПОСЛЕДНИЙ коммит (subject + body)
+          RAW_COMMIT="$(git log -1 --no-color --pretty=format:'%s%n%b')"
+          SUBJECT="$(echo "${RAW_COMMIT}" | head -n 1 | tr -d '\r')"
+          echo "Analyzing commit: ${SUBJECT}"
+
+          # Регулярка для Conventional Commits
+          HEADER_RE='^(feat|fix|perf|refactor|chore|docs|style|test|build|ci|revert)(\([^)]+\))?(!)?: .+'
+
+          if ! [[ "${SUBJECT}" =~ ${HEADER_RE} ]]; then
+            echo "ERROR: Latest commit does not follow Conventional Commits: ${SUBJECT}"
+            echo "Example: 'feat: add arm64 support' or 'fix: resolve memory leak'"
             exit 1
           fi
 
-          # Соберём список коммитов (subject + body) по одному, разделитель — NUL
-          mapfile -d '' COMMITS < <(git log ${RANGE} --no-color --pretty=format:'%s%n%b%x00')
+          TYPE="${BASH_REMATCH[1]}"
+          BANG="${BASH_REMATCH[3]:-}"
 
-          if [[ "${#COMMITS[@]}" -eq 0 ]]; then
-            echo "ERROR: No commits found to analyze."
-            exit 1
+          # Определение силы изменения (BUMP)
+          BUMP="none"
+          if [[ "${BANG}" == "!" ]] || echo "${RAW_COMMIT}" | grep -Eq '(^|\n)BREAKING CHANGE:'; then
+            BUMP="major"
+          elif [[ "${TYPE}" == "feat" ]]; then
+            BUMP="minor"
+          elif [[ "${TYPE}" == "fix" || "${TYPE}" == "perf" ]]; then
+            BUMP="patch"
           fi
-
-          # Conventional Commits header regex:
-          # type(scope)!: subject
-          HEADER_RE='^(feat|fix|perf|refactor|chore|docs|style|test|build|ci|revert)($$[^)]+$$)?(!)?: .+'
-
-          BUMP="none" # none < patch < minor < major
-
-          bump_rank () {
-            case "$1" in
-              none) echo 0 ;;
-              patch) echo 1 ;;
-              minor) echo 2 ;;
-              major) echo 3 ;;
-              *) echo 0 ;;
-            esac
-          }
-
-          max_bump () {
-            local a="$1" b="$2"
-            if (( $(bump_rank "$a") >= $(bump_rank "$b") )); then echo "$a"; else echo "$b"; fi
-          }
-
-          for RAW in "${COMMITS[@]}"; do
-            SUBJECT="$(printf "%s" "${RAW}" | head -n 1 | tr -d '\r')"
-
-            if ! [[ "${SUBJECT}" =~ ${HEADER_RE} ]]; then
-              echo "ERROR: Non-conventional commit found:"
-              echo "  ${SUBJECT}"
-              exit 1
-            fi
-
-            TYPE="${BASH_REMATCH[1]}"
-            BANG="${BASH_REMATCH[3]:-}"
-
-            IS_BREAKING="false"
-            if [[ "${BANG}" == "!" ]]; then
-              IS_BREAKING="true"
-            fi
-            if echo "${RAW}" | grep -Eq '(^|\n)BREAKING CHANGE:'; then
-              IS_BREAKING="true"
-            fi
-
-            if [[ "${IS_BREAKING}" == "true" ]]; then
-              BUMP="$(max_bump "${BUMP}" "major")"
-              continue
-            fi
-
-            case "${TYPE}" in
-              feat) BUMP="$(max_bump "${BUMP}" "minor")" ;;
-              fix|perf) BUMP="$(max_bump "${BUMP}" "patch")" ;;
-              *) : ;; # валидно, но не версионирует
-            esac
-          done
 
           if [[ "${BUMP}" == "none" ]]; then
-            echo "ERROR: No versionable changes found."
-            echo "Need at least one of: feat (minor), fix/perf (patch), or BREAKING CHANGE/! (major)."
-            exit 1
+             echo "Info: Commit type '${TYPE}' does not trigger a version bump. Defaulting to patch."
+             BUMP="patch"
           fi
 
+          # 3. Инкремент версии
+          IFS='.' read -r MAJOR MINOR PATCH <<< "${BASE_VERSION}"
           case "${BUMP}" in
             major) MAJOR=$((MAJOR+1)); MINOR=0; PATCH=0 ;;
             minor) MINOR=$((MINOR+1)); PATCH=0 ;;
@@ -131,19 +88,17 @@ jobs:
           echo "git_tag=${GIT_TAG}" >> "$GITHUB_OUTPUT"
 
   docker:
-    name: Build & push (frontend)
+    name: Build & push (multi-arch)
     runs-on: ubuntu-latest
     needs: [version]
-    permissions:
-      contents: read
     env:
       IMAGE: smplay/my-vite-frontend
       VERSION: ${{ needs.version.outputs.version }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # QEMU нужен для эмуляции ARM64 на x86 раннере GitHub
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -156,37 +111,28 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Ensure version tag does not already exist in Docker Hub
-        shell: bash
-        run: |
-          set -euo pipefail
-          if docker manifest inspect "${IMAGE}:${VERSION}" >/dev/null 2>&1; then
-            echo "ERROR: Docker Hub tag already exists: ${IMAGE}:${VERSION}"
-            exit 1
-          fi
-          echo "OK: ${IMAGE}:${VERSION} does not exist yet."
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
           push: true
+          # ТЕПЕРЬ СОБИРАЕМ ПОД ОБЕ ПЛАТФОРМЫ
           platforms: linux/amd64,linux/arm64
           tags: |
-            smplay/my-vite-frontend:latest
-            smplay/my-vite-frontend:${{ needs.version.outputs.version }}
+            ${{ env.IMAGE }}:latest
+            ${{ env.IMAGE }}:${{ env.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   tag:
-    name: Create and push git tag (only if Docker succeeded)
+    name: Push Git Tag
     runs-on: ubuntu-latest
     needs: [version, docker]
     permissions:
       contents: write
     steps:
-      - name: Checkout (with tags)
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -196,14 +142,6 @@ jobs:
         env:
           GIT_TAG: ${{ needs.version.outputs.git_tag }}
         run: |
-          set -euo pipefail
-
-          git fetch --tags --force
-          if git rev-parse -q --verify "refs/tags/${GIT_TAG}" >/dev/null; then
-            echo "ERROR: Git tag already exists: ${GIT_TAG}"
-            exit 1
-          fi
-
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a "${GIT_TAG}" -m "Release ${GIT_TAG}"
